# ticket3387

./: .bumpversion.cfg  README.md  pyproject.toml  wip-cookiecutter.json
scripts/: batch_run_eachpatient.py  probability_combinations1.csv  probability_combinations_subset.csv  test_moneymodel.py
tests/ticket3387/: test_ticket3387.py
ticket3387/: __init__.py  batch_run_simMPI_eachpatient.py.orig  combined_data_filled_mean.xlsx
